[gd_scene load_steps=2 format=3 uid="uid://bw5gwggpr0osh"]

[ext_resource type="Script" uid="uid://bpyqn1bpma84u" path="res://Scripts/Scenes/debug_menu.gd" id="1_842g3"]

[node name="DebugMenu" type="Control"]
custom_minimum_size = Vector2(100, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 11.0
offset_right = -26.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_842g3")

[node name="BoardSize" type="OptionButton" parent="."]
custom_minimum_size = Vector2(15, 15)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_right = 58.5
offset_bottom = 31.0
grow_horizontal = 2
selected = 0
item_count = 11
popup/item_0/text = "Board size:"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5
popup/item_6/text = "6"
popup/item_6/id = 6
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "8"
popup/item_8/id = 8
popup/item_9/text = "9"
popup/item_9/id = 9
popup/item_10/text = "10"
popup/item_10/id = 10

[node name="DrawHand" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -112.0
offset_right = 56.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
text = "Draw a hand"

[connection signal="item_selected" from="BoardSize" to="." method="_on_board_size_item_selected"]
[connection signal="pressed" from="DrawHand" to="." method="_on_draw_hand_pressed"]
